<resources>
    <string name="app_name">DSC Denuncia Express</string>
    <string name="main_view_title">Si ves algo, di algo</string>
    <string name="privacy_advice_link">Aviso de privacidad</string>
    <string name="dsc_symbol">©DSC 2018</string>
    <string name="img_logo_dsc">Logo de la empresa</string>
    <string name="anon_btn_prompt">Denuncia Express</string>
    <string name="welcome_title">Nice title goes here</string>
    <string name="welcome_message">Al hacer uso de la aplicacion consientes el uso de la informacion recabada para los fines de investigacion pertinenetes. Consulta el aviso de  privacidad en https:wwww.example.com/privacy</string>
    <string name="prompt_ok">OK</string>
    <string name="prompt_cancel">Cancelar</string>
    <string name="dont_ask_again">Volver a mostrar</string>
    <string name="toast_sample">Se ha iniciado la actividad</string>
    <string name="title_activity_main_report">MainReportActivity</string>
    <string name="action_settings">Settings</string>
    <string name="appBarTitle">Seguridad Patrimonial</string>
    <string name="new_report">Nuevo reporte</string>
    <string name="say_something">\"Si ves algo di algo. \"</string>
    <string name="express_complaint_system">Sistema de denuncia express</string>
    <string name="evidence_taking">Evidencia</string>
    <string name="open_app">Abrir aplicacion</string>
    <string name="no_data">Inicie nuevo reporte</string>
    <string name="current_report">Reporte Actual</string>
    <string name="subject">Asunto : %1$s</string>
    <string name="date">Edicion de reporte : %1$s</string>
    <string name="resume">Resumen : %1$s</string>
    <string name="evidencias">Evidencias</string>
    <string name="send_report">Enviar reporte</string>
    <string name="advice">Aviso</string>
    <string name="waiting_edition">Esperando edicion</string>
    <string name="fill_report_help">.-Favor de llenar los campos que a continuacion se listan, todos los datos son requeridos</string>
    <string name="generals">1.-Datos Generales</string>
    <string name="name">Nombre completo</string>
    <string name="position">Posicion / Cargo</string>
    <string name="prefer_not_say_it">Prefiero omitir mis datos</string>
    <string name="site_name">Site (Ej. DHL Cedros)</string>
    <string name="site_client">Cliente (Ej. ATT)</string>
    <string name="site_info">2.-Datos del site</string>
    <string name="event_facts">3.-Datos del evento</string>
    <string name="event_facts_datetime">Hora y fecha del evento</string>
    <string name="events_fact_what">Que paso?</string>
    <string name="events_fact_how">Como paso?</string>
    <string name="events_fact_where">Donde paso?</string>
    <string name="events_fact_exp">Explicacion de los hechos</string>
    <string name="event_facts_hint">Narracion de el evento</string>
    <string name="unknown_file_advice">El archivo seleccionado podria no enviarse debido a que no es un tipo conocido de archivo. Los formatos mas comunes soportados son jpeg, png, gif, bitmap, pdf, doc, docx, mp4. EL archivo se adjuntara con el reporte pero no se garantiza el seguimiento si la informacion no es legible.</string>
    <string name="save_report">Continuar</string>
    <string name="datetimeprompt">Seleccione fecha y hora aproximada del evento</string>
    <string name="logodescription">Logo</string>
    <string name="notempty">Este campo no puede estar vacio.</string>
    <string name="reqPermTitle">Permisos de la app</string>
    <string name="reqPermExpl">La aplicacion necesita acceder a la camara y almacenamiento para poder cargar documentos y fotografias anexas a la evidencia, puedes revocar este permiso en cualquier momento desde las propiedades de la app en Configuracion>Aplicaciones>Supply Chain Security>Permisos.</string>
    <string name="nofilestoupload">No hay archivos para subir</string>
    <string name="networkerrortitle">Error de conexion</string>
    <string name="networkerror">Se ha agotado el tiempo de espera, favor de revisar la conexion a internet e intente de nuevo.</string>
    <string name="savedReportTitle">Reporte guardado</string>
    <string name="success">Exito!!!</string>
    <string name="savedReportContent">El reporte se ha guardado con exito</string>
</resources>
